# onlineMusicPlayer-qmlStudy

./: App.cpp  App.qml  CMakeLists.txt  DetailFavoritePageView.qml  DetailHistoryPageView.qml  DetailLocalPageView.qml  DetailRecommendPageView.qml  DetailSearchPageView.qml  LayoutBottomView.qml  LayoutHeaderView.qml  MusicBannerView.qml  MusicGridHotView.qml  MusicGridLatestView.qml  MusicIconButton.qml  MusicListView.qml  MusicRoundImage.qml  MusicToolButton.qml  PageHomeView.qml  httputils.cpp  httputils.h  images.qrc  qml.qrc
